passenger and 960gs

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -6,33 +6,46 @@
         %script{src: "js/jquery.ui.widget.js"}
         %script{src: "js/jquery.iframe-transport.js"}
         %script{src: "js/jquery.fileupload.js"}
+        %link{:href => "css/960.css", :rel => 'stylesheet', :type => 'text/css'}
         :css
             .bar {
                 height: 18px;
                 background: green;
             }
     %body{:style => "font-size:9pt;"}
-        %h1 Send Mail
-        Mobile Bills:
-        %input{:type => "file", :id => "fileupload", :name => "zipfiles[]", :multiple => "multiple", :'data-url' => "/mobile-bills"}
-        %br      
-        #progress
-            .bar{:style => "width: 0%;color: white;font-size:9pt;"}              
-        %form{:action => "/upload-bills", :method => "post", :enctype => "multipart/form-data"}
-            Excel file:
-            %input{:type => "file", :name => "xlsfile"}
-            %input{:type => "submit"}
-        =yield
-        :javascript
-            $(function () {
-                $('#fileupload').fileupload({
-                    dataType: 'json',
-                    done: function (e, data) {                     
-                    },
-                    progressall: function (e, data) {
-                        var progress = parseInt(data.loaded / data.total * 100, 10);
-                        $('#progress .bar').css('width', (progress - 1) + '%');
-                        $('#progress .bar').text('' + progress + ' %');
-                    }
+        .container_12
+            .grid_12{:align => 'center'}
+                %h1 Send Mail
+            .grid_4 &nbsp;
+            .grid_2{:align => 'right'}
+                Mobile Bills:
+            .grid_3
+                %input{:type => "file", :id => "fileupload", :name => "zipfiles[]", :multiple => "multiple", :'data-url' => "/mobile-bills"}
+            .clear
+            .grid_4 &nbsp;            
+            .grid_5
+                #progress
+                    .bar{:style => "width: 0%;color: white;font-size:9pt;"}              
+            .clear
+            %form{:action => "/upload-bills", :method => "post", :enctype => "multipart/form-data"}
+                .grid_4 &nbsp;
+                .grid_2{:align => 'right'}
+                    Excel file:
+                %input{:type => "file", :name => "xlsfile", :class => 'grid_3'}
+                .clear
+                .grid_12{:align => 'center'}
+                    %input{:type => "submit"}
+            =yield
+            :javascript
+                $(function () {
+                    $('#fileupload').fileupload({
+                        dataType: 'json',
+                        done: function (e, data) {                     
+                        },
+                        progressall: function (e, data) {
+                            var progress = parseInt(data.loaded / data.total * 100, 10);
+                            $('#progress .bar').css('width', (progress - 1) + '%');
+                            $('#progress .bar').text('' + progress + ' %');
+                        }
+                    });
                 });
-            });
