--- a/views/partials/success.haml
+++ b/views/partials/success.haml
@@ -1,5 +1,6 @@
 .grid_12{:align => 'center'}
-	%h1= name
+	%h1
+		= "For month: #{name}, From Address: #{from}"
 .clear
 .grid_12{:align => 'center'}
 	%form{:action => "/send-mail", :method => "post"}
@@ -8,7 +9,7 @@
 - index = 0
 - data.each do |d|
 	- id = (d[8].split('@').first).split('.').first
-	%div{:style => "color:#{d[9] ? 'black' : 'red'};font-size:9pt", :id => id}
+	.pending{:style => "color:#{d[9] ? 'black' : 'red'};font-size:9pt", :id => id}
 		.grid_1{:style => "text-align:right;font-weight:bold"}= index += 1
 		.grid_5= d[1]
 		.grid_2= d[2]
