Customized vendor name for each office. Created seperate config files for each office to hold such office specific data Encapsulated office

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -44,12 +44,12 @@
                 %br
                 .grid_5 &nbsp;
                 .grid_3
-                    %select{:id => 'office'}
+                    %select{:id => 'office', :name => 'office'}
                         %option{:value => 0} Select Office
-                        %option{:value => 1} Chennai
-                        %option{:value => 2} Bangalore
-                        %option{:value => 3} Gurgaon                    
-                        %option{:value => 4} Pune
+                        %option{:value => "chennai"} Chennai
+                        %option{:value => "bangalore"} Bangalore
+                        %option{:value => "gurgaon"} Gurgaon
+                        %option{:value => "pune"} Pune
                 .clear
                 %br
                 .grid_12{:align => 'center'}
