--- a/views/mail-template.haml
+++ b/views/mail-template.haml
@@ -2,7 +2,7 @@
 ==Dear #{emp_name},
 %br
 %br
-==Your airtel bill for the month of #{name}. If your usage has exceeded the limit (<B>in case of official calls</B>), please send a mail to twipayroll@thoughtworks.com marking your PM.
+==Your #{vendor} bill for the month of #{name}. If your usage has exceeded the limit (<B>in case of official calls</B>), please send a mail to twipayroll@thoughtworks.com marking your PM.
 %br
 %br
 %table{:border => 1}
