--- a/views/layout.haml
+++ b/views/layout.haml
@@ -50,6 +50,7 @@
                         %option{:value => "bangalore"} Bangalore
                         %option{:value => "gurgaon"} Gurgaon
                         %option{:value => "pune"} Pune
+                        %option{:value => "hyderabad"} Hyderabad
                 .clear
                 %br
                 .grid_12{:align => 'center'}
